# super-outlier-dlm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
configs/: condor.yaml  config.yaml  slurm.yaml
configs/evaluation/: arc_challenge.yaml  arc_easy.yaml  batchsize_sweep.yaml  boolq.yaml  commonsense.yaml  full.yaml  gsm8k.yaml  gsm8k_efficient.yaml  gsm8k_full.yaml  hellaswag.yaml  openbookqa.yaml  piqa.yaml  request_batchsize_sweep.yaml  small.yaml  winogrande.yaml
configs/model/: ar_160m.yaml  dlm_160m.yaml  dream_7b.yaml  dream_7b_base.yaml  llada_8b.yaml  llada_8b_base.yaml  llama_3_1_8b_base.yaml  llama_3_1_8b_instruct.yaml  qwen_2_5_7b_base.yaml  qwen_2_5_7b_instruct.yaml
configs/pruning/: dwanda.yaml  magnitude.yaml  magnitude_alpha.yaml  magnitude_owl.yaml  none.yaml  sparsegpt.yaml  wanda.yaml  wanda_abc_gain.yaml  wanda_alpha.yaml  wanda_owl.yaml
configs/quantization/: dgptq_virtual.yaml  gptq.yaml  gptq_virtual.yaml  none.yaml  rtn.yaml
experiments/A11_owl_scores/: plot.py  plot.sh  run.sh
experiments/A23_pruning_statistics/: plot.py  plot.sh  run.sh  run_alpha_peak.sh  run_ar.sh  run_dlm.sh  run_mmr.sh  run_similarity.sh  run_similarity_ar.sh  run_similarity_llada_zero3848.sh  run_similarity_llama_zero291.sh
experiments/A24_pythia160m/: plot.py  plot.sh  run.sh  run_ar.sh  run_batchsize_sweep.sh  run_dlm.sh  run_dlm_test.sh  run_limited.sh  run_request_batchsize_sweep.sh  run_similarity.sh  run_stats.sh  test_ar_pruning_sanity.sh
experiments/A25_activation_histograms/: plot.py  plot.sh  run.sh  run_ar_160m.sh  run_ar_8b.sh  run_dlm_160m.sh  run_dlm_8b.sh
scripts/: README.md  _common.py  _results.py  _style.py  _tables.py  baseline_table.py  best_hyperparams.py  condor_run.sh  download_artifacts.py  download_c4.py  download_eval_datasets.py  plot.py  pruning_statistics.py  regenerate_cache.py  replot_paper_figures.sh  run.py  submit.py  summary_table.py
scripts/stats/: alpha.py  (+7 more)
tests/: test_dgptq_virtual.py  test_dream_model.py  test_dwanda.py  test_gptq_virtual.py  test_llada_model.py  test_sparsity_strategy.py
(+53 files in other folders)
